@@ -16,9 +16,12 @@
  */
 package com.wazuh.contentmanager.rest.model;
 
-import com.google.gson.JsonArray;
-import com.google.gson.JsonObject;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.databind.node.ArrayNode;
+import com.fasterxml.jackson.databind.node.ObjectNode;
+
 import org.opensearch.test.OpenSearchTestCase;
+import org.junit.Assert;
 import org.junit.Before;
 
 import java.util.Arrays;
@@ -38,6 +41,7 @@ import com.wazuh.contentmanager.cti.catalog.model.Policy;
 public class PolicyTests extends OpenSearchTestCase {
 
     private Policy policy;
+    private ObjectMapper mapper;
 
     /**
      * Set up the tests.
@@ -49,6 +53,7 @@ public class PolicyTests extends OpenSearchTestCase {
     public void setUp() throws Exception {
         super.setUp();
         this.policy = new Policy();
+        this.mapper = new ObjectMapper();
     }
 
     /** Test default constructor initialization. */
@@ -57,21 +62,23 @@ public class PolicyTests extends OpenSearchTestCase {
         Policy defaultPolicy = new Policy();
 
         // Assert
-        assertNotNull(defaultPolicy.getIntegrations());
-        assertTrue(defaultPolicy.getIntegrations().isEmpty());
-        assertNull(defaultPolicy.getRootDecoder());
-        assertNull(defaultPolicy.getAuthor());
-        assertNull(defaultPolicy.getDescription());
-        assertNull(defaultPolicy.getDocumentation());
-        assertNotNull(defaultPolicy.getReferences());
-        assertTrue(defaultPolicy.getReferences().isEmpty());
+        Assert.assertNotNull(defaultPolicy.getIntegrations());
+        Assert.assertTrue(defaultPolicy.getIntegrations().isEmpty());
+        Assert.assertNull(defaultPolicy.getRootDecoder());
+        Assert.assertNull(defaultPolicy.getAuthor());
+        Assert.assertNull(defaultPolicy.getDescription());
+        Assert.assertNull(defaultPolicy.getDocumentation());
+        Assert.assertNotNull(defaultPolicy.getReferences());
+        Assert.assertTrue(defaultPolicy.getReferences().isEmpty());
     }
 
     /** Test parameterized constructor with all fields. */
     public void testParameterizedConstructor_AllFields() {
         // Arrange
         List<String> integrations = Arrays.asList("integration1", "integration2");
-        List<String> references = Arrays.asList("https://example.com/refs");
+        List<String> filters = List.of("filter1");
+        List<String> enrichments = List.of("enrichment1");
+        List<String> references = List.of("https://example.com/refs");
 
         // Act
         Policy testPolicy =
@@ -82,123 +89,126 @@ public class PolicyTests extends OpenSearchTestCase {
                         null, // modified
                         "decoder/root/0", // rootDecoder
                         integrations,
+                        filters,
+                        enrichments,
                         "Wazuh Inc.",
                         "Test policy description",
                         "Documentation content",
                         references);
 
         // Assert
-        assertEquals("decoder/root/0", testPolicy.getRootDecoder());
-        assertEquals(2, testPolicy.getIntegrations().size());
-        assertEquals("integration1", testPolicy.getIntegrations().get(0));
-        assertEquals("integration2", testPolicy.getIntegrations().get(1));
-        assertEquals("Wazuh Inc.", testPolicy.getAuthor());
-        assertEquals("Test policy description", testPolicy.getDescription());
-        assertEquals("Documentation content", testPolicy.getDocumentation());
-        assertEquals(1, testPolicy.getReferences().size());
-        assertEquals("https://example.com/refs", testPolicy.getReferences().get(0));
+        Assert.assertEquals("decoder/root/0", testPolicy.getRootDecoder());
+        Assert.assertEquals(2, testPolicy.getIntegrations().size());
+        Assert.assertEquals("integration1", testPolicy.getIntegrations().get(0));
+        Assert.assertEquals("integration2", testPolicy.getIntegrations().get(1));
+        Assert.assertEquals("Wazuh Inc.", testPolicy.getAuthor());
+        Assert.assertEquals("Test policy description", testPolicy.getDescription());
+        Assert.assertEquals("Documentation content", testPolicy.getDocumentation());
+        Assert.assertEquals(1, testPolicy.getReferences().size());
+        Assert.assertEquals("https://example.com/refs", testPolicy.getReferences().get(0));
     }
 
     /** Test parameterized constructor with null values. */
     public void testParameterizedConstructor_NullValues() {
         // Act
-        Policy testPolicy = new Policy(null, null, null, null, null, null, null, null, null, null);
+        Policy testPolicy =
+                new Policy(null, null, null, null, null, null, null, null, null, null, null, null);
 
         // Assert
-        assertNotNull(testPolicy.getIntegrations()); // Defaults to empty list
-        assertTrue(testPolicy.getIntegrations().isEmpty());
-        assertNull(testPolicy.getRootDecoder());
-        assertNull(testPolicy.getAuthor());
-        assertNotNull(testPolicy.getReferences());
-        assertTrue(testPolicy.getReferences().isEmpty());
+        Assert.assertNotNull(testPolicy.getIntegrations()); // Defaults to empty list
+        Assert.assertTrue(testPolicy.getIntegrations().isEmpty());
+        Assert.assertNull(testPolicy.getRootDecoder());
+        Assert.assertNull(testPolicy.getAuthor());
+        Assert.assertNotNull(testPolicy.getReferences());
+        Assert.assertTrue(testPolicy.getReferences().isEmpty());
     }
 
     /** Test fromPayload factory method with complete payload. */
     public void testFromPayload_CompletePayload() {
         // Arrange
-        JsonObject payload = getPayload();
+        ObjectNode payload = this.getPayload();
 
         // Act
         Policy testPolicy = Policy.fromPayload(payload);
 
         // Assert
-        assertEquals("decoder/integrations/0", testPolicy.getRootDecoder());
-        assertEquals(2, testPolicy.getIntegrations().size());
-        assertEquals("integration/wazuh-core/0", testPolicy.getIntegrations().get(0));
-        assertEquals("integration/wazuh-fim/0", testPolicy.getIntegrations().get(1));
-        assertEquals("Wazuh Inc.", testPolicy.getAuthor());
-        assertEquals("Core policy", testPolicy.getDescription());
-        assertEquals("Policy documentation", testPolicy.getDocumentation());
-        assertEquals(1, testPolicy.getReferences().size());
-        assertEquals("https://wazuh.com", testPolicy.getReferences().get(0));
+        Assert.assertEquals("decoder/integrations/0", testPolicy.getRootDecoder());
+        Assert.assertEquals(2, testPolicy.getIntegrations().size());
+        Assert.assertEquals("integration/wazuh-core/0", testPolicy.getIntegrations().get(0));
+        Assert.assertEquals("integration/wazuh-fim/0", testPolicy.getIntegrations().get(1));
+        Assert.assertEquals("Wazuh Inc.", testPolicy.getAuthor());
+        Assert.assertEquals("Core policy", testPolicy.getDescription());
+        Assert.assertEquals("Policy documentation", testPolicy.getDocumentation());
+        Assert.assertEquals(1, testPolicy.getReferences().size());
+        Assert.assertEquals("https://wazuh.com", testPolicy.getReferences().get(0));
     }
 
     /** Helper method to create a complete JSON payload for testing. */
-    private static JsonObject getPayload() {
-        JsonObject payload = new JsonObject();
-        payload.addProperty("root_decoder", "decoder/integrations/0");
+    private ObjectNode getPayload() {
+        ObjectNode payload = this.mapper.createObjectNode();
+        payload.put("root_decoder", "decoder/integrations/0");
 
-        JsonArray integrationsArray = new JsonArray();
+        ArrayNode integrationsArray = this.mapper.createArrayNode();
         integrationsArray.add("integration/wazuh-core/0");
         integrationsArray.add("integration/wazuh-fim/0");
-        payload.add("integrations", integrationsArray);
+        payload.set("integrations", integrationsArray);
 
-        payload.addProperty("author", "Wazuh Inc.");
-        payload.addProperty("description", "Core policy");
-        payload.addProperty("documentation", "Policy documentation");
-        JsonArray referencesArray = new JsonArray();
+        payload.put("author", "Wazuh Inc.");
+        payload.put("description", "Core policy");
+        payload.put("documentation", "Policy documentation");
+        ArrayNode referencesArray = this.mapper.createArrayNode();
         referencesArray.add("https://wazuh.com");
-        payload.add("references", referencesArray);
+        payload.set("references", referencesArray);
         return payload;
     }
 
     /** Test fromPayload factory method with minimal payload. */
     public void testFromPayload_MinimalPayload() {
         // Arrange
-        JsonObject payload = new JsonObject();
+        ObjectNode payload = this.mapper.createObjectNode();
 
         // Act
         Policy testPolicy = Policy.fromPayload(payload);
 
         // Assert
-        assertNotNull(testPolicy);
-        assertNull(testPolicy.getRootDecoder());
-        assertNotNull(testPolicy.getIntegrations());
-        assertTrue(testPolicy.getIntegrations().isEmpty());
+        Assert.assertNotNull(testPolicy);
+        Assert.assertNull(testPolicy.getRootDecoder());
+        Assert.assertNotNull(testPolicy.getIntegrations());
+        Assert.assertTrue(testPolicy.getIntegrations().isEmpty());
     }
 
     /** Test fromPayload with null values in JSON. */
     public void testFromPayload_NullValues() {
         // Arrange
-        JsonObject payload = new JsonObject();
-        payload.add("root_decoder", null);
-        payload.add("author", null);
+        ObjectNode payload = this.mapper.createObjectNode();
+        payload.putNull("root_decoder");
+        payload.putNull("author");
 
         // Act
         Policy testPolicy = Policy.fromPayload(payload);
 
         // Assert
-        assertNull(testPolicy.getRootDecoder());
-        assertNull(testPolicy.getAuthor());
+        Assert.assertNull(testPolicy.getRootDecoder());
+        Assert.assertNull(testPolicy.getAuthor());
     }
 
     /** Test fromPayload with integrations containing null elements. */
     public void testFromPayload_IntegrationsWithNulls() {
         // Arrange
-        JsonObject payload = new JsonObject();
-        JsonArray integrationsArray = new JsonArray();
+        ObjectNode payload = this.mapper.createObjectNode();
+        ArrayNode integrationsArray = this.mapper.createArrayNode();
         integrationsArray.add("integration1");
-        integrationsArray.add((String) null);
+        integrationsArray.addNull();
         integrationsArray.add("integration2");
-        payload.add("integrations", integrationsArray);
+        payload.set("integrations", integrationsArray);
 
         // Act
         Policy testPolicy = Policy.fromPayload(payload);
 
         // Assert
-        assertEquals(2, testPolicy.getIntegrations().size());
-        assertEquals("integration1", testPolicy.getIntegrations().get(0));
-        assertEquals("integration2", testPolicy.getIntegrations().get(1));
+        Assert.assertEquals(2, testPolicy.getIntegrations().size());
+        Assert.assertEquals("integration1", testPolicy.getIntegrations().get(0));
+        Assert.assertEquals("integration2", testPolicy.getIntegrations().get(1));
     }
 
     /** Test toMap conversion with complete policy. */
@@ -210,18 +220,18 @@ public class PolicyTests extends OpenSearchTestCase {
         this.policy.setAuthor("Wazuh Inc.");
         this.policy.setDescription("Test description");
         this.policy.setDocumentation("Test docs");
-        this.policy.setReferences(Arrays.asList("https://test.com"));
+        this.policy.setReferences(List.of("https://test.com"));
 
         // Act
         Map<String, Object> map = this.policy.toMap();
 
         // Assert
-        assertEquals("decoder/root/0", map.get("root_decoder"));
-        assertEquals(integrations, map.get("integrations"));
-        assertEquals("Wazuh Inc.", map.get("author"));
-        assertEquals("Test description", map.get("description"));
-        assertEquals("Test docs", map.get("documentation"));
-        assertEquals(Arrays.asList("https://test.com"), map.get("references"));
+        Assert.assertEquals("decoder/root/0", map.get("root_decoder"));
+        Assert.assertEquals(integrations, map.get("integrations"));
+        Assert.assertEquals("Wazuh Inc.", map.get("author"));
+        Assert.assertEquals("Test description", map.get("description"));
+        Assert.assertEquals("Test docs", map.get("documentation"));
+        Assert.assertEquals(List.of("https://test.com"), map.get("references"));
     }
 
     /** Test toMap conversion with minimal policy. */
@@ -233,9 +243,9 @@ public class PolicyTests extends OpenSearchTestCase {
         Map<String, Object> map = minimalPolicy.toMap();
 
         // Assert
-        assertFalse(map.containsKey("root_decoder"));
-        assertFalse(map.containsKey("integrations")); // Empty list not included
-        assertFalse(map.containsKey("author"));
+        Assert.assertFalse(map.containsKey("root_decoder"));
+        Assert.assertFalse(map.containsKey("integrations")); // Empty list not included
+        Assert.assertFalse(map.containsKey("author"));
     }
 
     /** Test toJson conversion with complete policy. */
@@ -248,16 +258,16 @@ public class PolicyTests extends OpenSearchTestCase {
         this.policy.setDescription("Test description");
 
         // Act
-        JsonObject json = this.policy.toJson();
+        ObjectNode json = this.policy.toJson();
 
         // Assert
-        assertEquals("decoder/root/0", json.get("root_decoder").getAsString());
-        assertTrue(json.get("integrations").isJsonArray());
-        assertEquals(2, json.getAsJsonArray("integrations").size());
-        assertEquals("int1", json.getAsJsonArray("integrations").get(0).getAsString());
-        assertEquals("int2", json.getAsJsonArray("integrations").get(1).getAsString());
-        assertEquals("Wazuh Inc.", json.get("author").getAsString());
-        assertEquals("Test description", json.get("description").getAsString());
+        Assert.assertEquals("decoder/root/0", json.get("root_decoder").asText());
+        Assert.assertTrue(json.get("integrations").isArray());
+        Assert.assertEquals(2, json.get("integrations").size());
+        Assert.assertEquals("int1", json.get("integrations").get(0).asText());
+        Assert.assertEquals("int2", json.get("integrations").get(1).asText());
+        Assert.assertEquals("Wazuh Inc.", json.get("author").asText());
+        Assert.assertEquals("Test description", json.get("description").asText());
     }
 
     /** Test toJson conversion with empty integrations after setting to null. */
@@ -266,13 +276,11 @@ public class PolicyTests extends OpenSearchTestCase {
         this.policy.setIntegrations(null); // Will be converted to empty list
 
         // Act
-        JsonObject json = this.policy.toJson();
+        ObjectNode json = this.policy.toJson();
 
         // Assert
         // Empty list creates an empty array in JSON
-        assertTrue(json.has("integrations"));
-        assertTrue(json.get("integrations").isJsonArray());
-        assertEquals(0, json.getAsJsonArray("integrations").size());
+        Assert.assertFalse(json.has("integrations"));
     }
 
     /** Test addIntegration with valid integration ID. */
@@ -282,9 +290,9 @@ public class PolicyTests extends OpenSearchTestCase {
         this.policy.addIntegration("integration2");
 
         // Assert
-        assertEquals(2, this.policy.getIntegrations().size());
-        assertTrue(this.policy.getIntegrations().contains("integration1"));
-        assertTrue(this.policy.getIntegrations().contains("integration2"));
+        Assert.assertEquals(2, this.policy.getIntegrations().size());
+        Assert.assertTrue(this.policy.getIntegrations().contains("integration1"));
+        Assert.assertTrue(this.policy.getIntegrations().contains("integration2"));
     }
 
     /** Test addIntegration with duplicate integration ID. */
@@ -294,8 +302,8 @@ public class PolicyTests extends OpenSearchTestCase {
         this.policy.addIntegration("integration1"); // Duplicate
 
         // Assert
-        assertEquals(1, this.policy.getIntegrations().size());
-        assertEquals("integration1", this.policy.getIntegrations().getFirst());
+        Assert.assertEquals(1, this.policy.getIntegrations().size());
+        Assert.assertEquals("integration1", this.policy.getIntegrations().get(0));
     }
 
     /** Test addIntegration with null integration ID. */
@@ -307,7 +315,7 @@ public class PolicyTests extends OpenSearchTestCase {
         this.policy.addIntegration(null);
 
         // Assert
-        assertEquals(initialSize, this.policy.getIntegrations().size());
+        Assert.assertEquals(initialSize, this.policy.getIntegrations().size());
     }
 
     /** Test removeIntegration with existing integration. */
@@ -320,10 +328,10 @@ public class PolicyTests extends OpenSearchTestCase {
         boolean removed = this.policy.removeIntegration("integration1");
 
         // Assert
-        assertTrue(removed);
-        assertEquals(1, this.policy.getIntegrations().size());
-        assertFalse(this.policy.getIntegrations().contains("integration1"));
-        assertTrue(this.policy.getIntegrations().contains("integration2"));
+        Assert.assertTrue(removed);
+        Assert.assertEquals(1, this.policy.getIntegrations().size());
+        Assert.assertFalse(this.policy.getIntegrations().contains("integration1"));
+        Assert.assertTrue(this.policy.getIntegrations().contains("integration2"));
     }
 
     /** Test removeIntegration with non-existing integration. */
@@ -335,8 +343,8 @@ public class PolicyTests extends OpenSearchTestCase {
         boolean removed = this.policy.removeIntegration("integration2");
 
         // Assert
-        assertFalse(removed);
-        assertEquals(1, this.policy.getIntegrations().size());
+        Assert.assertFalse(removed);
+        Assert.assertEquals(1, this.policy.getIntegrations().size());
     }
 
     /** Test setIntegrations with null list. */
@@ -345,8 +353,8 @@ public class PolicyTests extends OpenSearchTestCase {
         this.policy.setIntegrations(null);
 
         // Assert
-        assertNotNull(this.policy.getIntegrations());
-        assertTrue(this.policy.getIntegrations().isEmpty());
+        Assert.assertNotNull(this.policy.getIntegrations());
+        Assert.assertTrue(this.policy.getIntegrations().isEmpty());
     }
 
     /** Test setIntegrations with valid list. */
@@ -358,32 +366,32 @@ public class PolicyTests extends OpenSearchTestCase {
         this.policy.setIntegrations(integrations);
 
         // Assert
-        assertEquals(3, this.policy.getIntegrations().size());
-        assertEquals("int1", this.policy.getIntegrations().getFirst());
+        Assert.assertEquals(3, this.policy.getIntegrations().size());
+        Assert.assertEquals("int1", this.policy.getIntegrations().get(0));
     }
 
     /** Test all getters and setters. */
     public void testGettersAndSetters() {
         // Root Decoder
         this.policy.setRootDecoder("decoder/test/0");
-        assertEquals("decoder/test/0", this.policy.getRootDecoder());
+        Assert.assertEquals("decoder/test/0", this.policy.getRootDecoder());
 
         // Author
         this.policy.setAuthor("Test Author");
-        assertEquals("Test Author", this.policy.getAuthor());
+        Assert.assertEquals("Test Author", this.policy.getAuthor());
 
         // Description
         this.policy.setDescription("Test Description");
-        assertEquals("Test Description", this.policy.getDescription());
+        Assert.assertEquals("Test Description", this.policy.getDescription());
 
         // Documentation
         this.policy.setDocumentation("Test Documentation");
-        assertEquals("Test Documentation", this.policy.getDocumentation());
+        Assert.assertEquals("Test Documentation", this.policy.getDocumentation());
 
         // References
-        this.policy.setReferences(Arrays.asList("https://references.com"));
-        assertEquals(1, this.policy.getReferences().size());
-        assertEquals("https://references.com", this.policy.getReferences().get(0));
+        this.policy.setReferences(List.of("https://references.com"));
+        Assert.assertEquals(1, this.policy.getReferences().size());
+        Assert.assertEquals("https://references.com", this.policy.getReferences().get(0));
     }
 
     /** Test round-trip conversion: toJson -> fromPayload. */
@@ -396,13 +404,14 @@ public class PolicyTests extends OpenSearchTestCase {
         this.policy.setDescription("Test description");
 
         // Act
-        JsonObject json = this.policy.toJson();
+        ObjectNode json = this.policy.toJson();
         Policy reconstructed = Policy.fromPayload(json);
 
         // Assert
-        assertEquals(this.policy.getRootDecoder(), reconstructed.getRootDecoder());
-        assertEquals(this.policy.getIntegrations().size(), reconstructed.getIntegrations().size());
-        assertEquals(this.policy.getAuthor(), reconstructed.getAuthor());
-        assertEquals(this.policy.getDescription(), reconstructed.getDescription());
+        Assert.assertEquals(this.policy.getRootDecoder(), reconstructed.getRootDecoder());
+        Assert.assertEquals(
+                this.policy.getIntegrations().size(), reconstructed.getIntegrations().size());
+        Assert.assertEquals(this.policy.getAuthor(), reconstructed.getAuthor());
+        Assert.assertEquals(this.policy.getDescription(), reconstructed.getDescription());
     }
 }
